# warp_franka_test

./: README.md  pyproject.toml  test.py  test_live.py
assets/cartpole/: cartpole.urdf
assets/franka/: panda.urdf
